--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,9 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+          <configuration>
+			  <suiteXmlFiles>testng.xml</suiteXmlFiles>
+		  </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
